# GCD

./: .gitignore  CMakeLists.txt  README.md  gcd.cpp
convertedNumbers/: ConvertedNumbers.cpp  ConvertedNumbers.h
gcdFinder/: GcdFinder.cpp  GcdFinder.h
gcdNumber/: GcdNumber.cpp  GcdNumber.h
gcdPair/: GcdPair.cpp  GcdPair.h
indexPair/: IndexPair.cpp  IndexPair.h
numberPair/: NumberPair.cpp  NumberPair.h
stringToNumberConverter/: StringToNumberConverter.cpp  StringToNumberConverter.h
testing/googleTest/googlemock/: CMakeLists.txt
testing/googleTest/googlemock/scripts/: fuse_gmock_files.py
testing/googleTest/googlemock/src/: gmock-spec-builders.cc  gmock.cc
testing/googleTest/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_nc_test.py  gmock-function-mocker_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  (+8 more)
testing/googleTest/googletest/: CMakeLists.txt
testing/testRunner/: TestRunner.cpp  TestRunner.h
testing/tests/: Test_GCD.cpp  Test_GCD_10_20_30_40.cpp  Test_GCD_125_15_25.cpp  Test_GCD_3.cpp  Test_GCD_7_5_12.cpp
testing/tests/GcdFinder/: Test_GcdFinder.cpp
testing/tests/StringToNumberConverter/: Test_StringToNumberConverter.cpp
testing/tests/stringToNumberConverter/: Test_StringToNumberConverter.cpp  Test_StringToNumberConverter_Convert_Valid_Number_From_String_To_Long.cpp
utils/: Utils.cpp  Utils.h
(+76 files in other folders)
